Replace inefficient Arrays.asList with better alternative